--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "project03",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.x"
+  },
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api"
+    "dev": "nodemon api",
+    "start": "node api"
   },
   "author": "",
   "license": "ISC",
